[tool.poetry]
name = "deep-vgl-datasets"
version = "0.1.0"
description = ""
authors = ["Saravanabalagi Ramachandran <saravanabalagi@hotmail.com>"]
readme = "README.md"
packages = [{include = "deep_vgl_datasets"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
staticmap = "^0.5.5"
tqdm = "^4.64.1"
mega-py = "^1.0.8"
requests = "^2.28.1"
opencv-contrib-python = "^4.7.0.68"
scikit-image = "^0.19.3"
scipy = "^1.10.0"
matplotlib = "^3.6.2"
numpy = "^1.24.1"
utm = "^0.7.0"
pillow = "^9.4.0"
protobuf = "^4.21.12"
gdown = "^4.6.0"
torchvision = "^0.14.1"
pandas = "^1.5.2"
ipywidgets = "^8.0.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
